@@ -196,6 +196,7 @@ schema_error_segmentfield_invalid=Der segmentField Wert {0} entspricht keinem Fe
 schema_error_segmentfield_type_invalid=Der segmentField Wert kann nur Felder vom Typ string order binary referenzieren. Es wird ein Feld vom Typ {0} referenziert.
 schema_error_urlfield_type_invalid=Der urlFields Typ {0} von Feld {1} wird nicht unterstützt. Es sind nur String und String Listen erlaubt.
 schema_error_urlfield_null=Das urlField für Feld {0} kann nicht im Schema gefunden werden.
+schema_error_container_flag_missing=Das Feld container wurde nicht gesetzt.
 schema_error_no_fields=Es muss mindestens ein Feld angegeben werden.
 schema_error_no_name=Es wurde kein Schema Name angegeben.
 schema_error_list_type_missing=Es wurde kein listType Wert angegeben {0}.
