@@ -193,6 +193,7 @@ schema_error_segmentfield_invalid=The segmentField value {0} does not match any 
 schema_error_segmentfield_type_invalid=The segmentField can only reference string or binary fields. A field with type {0} was referenced.
 schema_error_urlfield_type_invalid=The urlFields type {0} of field {1} is not allowed. Only string and string lists are allowed.
 schema_error_urlfield_null=The urlField for field {0} can't be found within the schema.
+schema_error_container_flag_missing=The container flag has not been set.
 schema_error_no_fields=The schema must have at least one field.
 schema_error_no_name=No schema name was specified.
 schema_error_list_type_missing=No valid list type was specified for field schema {0}.
