@@ -37,8 +37,8 @@ public abstract class AbstractFieldSchemaContainerComparator<FC extends FieldSch
 	/**
 	 * Create a diff of both provides field containers.
 	 * 
-	 * @param containerA
-	 * @param containerB
+	 * @param containerA Current container
+	 * @param containerB New container
 	 * @param classOfFC
 	 *            Implementation class of the field containers
 	 * @return
